--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 			<div class="row justify-content-between">
 				<div class="col-md-8 col-lg-8 d-flex align-items-center">
 					<div class="w-100 py-4">
-						<h2>Have a project on your mind.</h2>
+						<h2>Have a project on your mind?</h2>
 						<p>It is one of the best option that you have choose in your entier life. <br>I maen that if you heled by doing this we can raise you </p>
 						<p class="mb-0"><a href="#contact-section" class="btn btn-white py-3 px-4">Contact me</a></p>
 					</div>
