--- a/index.html
+++ b/index.html
@@ -633,26 +633,27 @@
 
 			<div class="row block-9">
 				<div class="col-md-8">
-					<form id="registration_form" action="" class="bg-light p-4 p-md-5 contact-form">
+					<form name="registration_form" id="registration_form" action="" class="bg-light p-4 p-md-5 contact-form" onsubmit="return(validate());" novalidate="novalidate">
+					 
 						<div class="row">
 							<div class="col-md-6">
 								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Your Name">
+									<input type="text" id="name" name="name" class="form-control" placeholder="Your Name">
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Your Email">
+									<input type="text" id="mail" name="mail" class="form-control" placeholder="Your Email">
 								</div>
 							</div>
 							<div class="col-md-12">
 								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Subject">
+									<input type="text" id="subject" name="subject" class="form-control" placeholder="Subject">
 								</div>
 							</div>
 							<div class="col-md-12">
 								<div class="form-group">
-									<textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+									<textarea name="message" id="message" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
 								</div>
 							</div>
 							<div class="col-md-12">
@@ -795,6 +796,24 @@
 
 		
 	
-		<script type="text/javascript" src="index2.js"></script>
+		<script>
+			$("#registration_form").submit((e)=>{
+				e.preventDefault()
+				$.ajax({
+					url:"https://script.google.com/macros/s/AKfycbyF1qFZYA852al79GIrTlWD9fenH5G1a8MZ4KB8c-Pw3bHNU2viqXffd8-4dL0QRDPQuw/exec",
+					data:$("#registration_form").serialize(),
+					method:"post",
+					success:function (response){
+						alert("Form submitted successfully")
+						window.location.reload()
+						//window.location.href="https://google.com"
+					},
+					error:function (err){
+						alert("Something Error")
+		
+					}
+				})
+			})
+		</script>
 	</body>
 	</html>
