--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
 			<div class="row justify-content-center pb-5">
 				<div class="col-md-12 heading-section text-center ftco-animate">
 					<span class="subheading">Accomplishments</span>
-					<h2 class="mb-4">Our Projects</h2>
+					<h2 class="mb-4">Projects</h2>
 					<p>I have done some sample websites like WhatsApp web, Facebook, Google, and so forth.</p>
 				</div>
 			</div>
@@ -492,7 +492,7 @@
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-1.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+							<h3><a href="https://ameertmsy.github.io/GoogleDrive/">Branding &amp; Illustration Design</a></h3>
 							<span>Web Design</span>
 						</div>
 					</div>
@@ -501,7 +501,7 @@
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-2.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+							<h3><a href="https://ameertmsy.github.io/facebook/">Branding &amp; Illustration Design</a></h3>
 							<span>Web Design</span>
 						</div>
 					</div>
@@ -510,7 +510,7 @@
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-3.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+							<h3><a href="https://ameertmsy.github.io/whatsapp/">Branding &amp; Illustration Design</a></h3>
 							<span>Web Design</span>
 						</div>
 					</div>
@@ -519,7 +519,7 @@
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-4.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+							<h3><a href="https://ameertmsy.github.io/MY_SPS/">Branding &amp; Illustration Design</a></h3>
 							<span>Web Design</span>
 						</div>
 					</div>
